syntax = "proto3";

package auth;

service Auth {
  rpc CreateUser(Request) returns (Result);
  rpc GetToken(Request) returns (Token);
}

message Request {
  int64 user_id = 1;
  string password = 2;
}

message Result {
  int64 user_id = 1;
}

message Token {
  string token = 1;
}
